fix: tab layout issue in Firefox

--- a/admin/style.css
+++ b/admin/style.css
@@ -7,12 +7,20 @@ body {
 	margin: 0;
 }
 
+html,
+body {
+	/* Required for Firefox so the contents aren't cut off if they don't have a fixed size */
+	height: 100%;
+	height: 100vh;
+}
+
 .adapter-container {
 	height: 100%;
 	width: 100%;
 	position: relative;
 	display: flex;
 	flex-direction: column;
+	overflow: auto;
 }
 
 #map {
